# agentAru

./: .env.example  .gitignore  =0.2.0  ARCHITECTURE_DIAGRAM.md  FINAL_SUMMARY.md  INTERACTIVE_TESTING.md  MCP_INTEGRATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN.md  USAGE_GUIDE.md  WEB_SEARCH_GUIDE.md  app.py  pyproject.toml  requirements.txt  run_agent.py  test_mcp_direct.py  test_output.txt
agentAru-agno/: README.md  agent_aru.py  playground.py  requirements.txt  setup_env.sh
agentAru-openai-sdk/disputeMgmtAgent/: README.md  agents.py  env.example  main.py  requirements.txt  utils.py
docs/: api_reference.md  architecture.md  development_guide.md  mcp_integration.md  setup_guide.md
scripts/: setup.sh
src/: main.py  main_mcp.py
src/agents/: calendar_agent.py  email_agent.py  idea_agent.py  mcp_agent.py  supervisor_agent.py
src/config/: models.yaml  settings.py
src/core/: agent_graph.py  model_manager.py  state.py
src/integrations/: gmail.py
src/mcp/: mcp_servers.yaml
src/mcp_integration/: __init__.py  client.py  config.py  manager.py  mcp_servers.yaml  tool_manager.py
src/mcp_integration/servers/: README.md  filesystem_server.py  filesystem_server_v2.py  web_search_server.py
src/memory/: memory_manager.py  schemas.py  vector_store.py
src/ui/: streamlit_app.py
src/utils/: logger.py
tests/: conftest.py
